# 260511

./: .gitignore  CHANGELOG.md  README.md  index.html  pyproject.toml  requirements-dev.txt  requirements.txt
.monkeycode/: MEMORY.md
examples/: hotspot_sources.demo.json
scripts/: build_linux.sh  build_macos.sh  build_windows.ps1
src/zipora/: __init__.py  __main__.py  app.py  cli.py  version.py
src/zipora/core/: __init__.py  archive_service.py  exceptions.py  favorites.py  history.py  hotspots.py  models.py  security.py  settings.py  system.py  utils.py
src/zipora/gui/: main_window.py  settings_dialog.py  styles.py  workers.py
tests/: test_archive_service.py  test_favorites.py  test_hotspots.py  test_security.py
